@@ -1,4 +1,4 @@
-VERSION=0.77.1-20050918
+VERSION=0.77.1-20050924
 THISDIR=branch_0
 
 TOOLSPREFIX=
